--- a/catagories.html
+++ b/catagories.html
@@ -26,7 +26,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="fonts/">
 
-  <title>Maqaami hh | Catagories</title>
+  <title>Maqaami  | Catagories</title>
 
 </head>
 
