all links has been included

--- a/account-page/stores.html
+++ b/account-page/stores.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" href="../Links/bootstrap-4.6.0-dist/css/bootstrap.css">
 
-
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    crossorigin="anonymous" />
-
-
-  <!-- bootstrape 4.600 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <!-- bootstrape 4.600 end-->
-
+  <link rel="stylesheet" href="../Links/font-awesome/fontawesome-free-5.15.3-web/css/all.min.css" />
 
   <link rel="stylesheet" href="css/style.css">
+
   <link rel="stylesheet" href="css/productimage.css">
+
   <link rel="stylesheet" href="checkOut.css">
+
   <link rel="stylesheet" href="css/productimage.css">
 
   <link rel="stylesheet" href="trending.css">
+
   <title> Trending </title>
 </head>
 
@@ -38,7 +37,8 @@
         <h4 style="color: #404553; font-weight: bold; font-size: 27px;"> You're not following any stores </h4>
         <P> <small style="color: #404553; font-size: 16px;"> Just keep browsing to get back on track </small> </P>
 
-        <a href="new-account.html" style="color: white;"> <button type="button" class="font-weight-bolder btn btn-primary w-75">  BACK TO ACCOUNT </button> </a>
+        <a href="new-account.html" style="color: white;"> <button type="button"
+            class="font-weight-bolder btn btn-primary w-75"> BACK TO ACCOUNT </button> </a>
 
       </div>
     </div>
@@ -52,111 +52,73 @@
 
   </div> -->
 
-<!-- MOBILE BOTTOM BAR STARTS -->
+    <!-- MOBILE BOTTOM BAR STARTS -->
 
-  <div class="container fixed-bottom mobile-bottom-bar" style="background: #fafaf7; height: 60px; width: 100%;">
+    <div class="container fixed-bottom mobile-bottom-bar" style="background: #fafaf7; height: 60px; width: 100%;">
 
-    <div class="d-flex flex-row justify-content-between">
+      <div class="d-flex flex-row justify-content-between">
 
-      <div class="p-2 text-center">
+        <div class="p-2 text-center">
 
-        <a href="../index.html"> <img src="../mobile-category-images/bottom-bar-images/home1.png" class="img-fluid" /> </a>
+          <a href="../index.html"> <img src="../mobile-category-images/bottom-bar-images/home1.png" class="img-fluid" />
+          </a>
 
-        <p style="font-size: 11px;"> Home </p>
+          <p style="font-size: 11px;"> Home </p>
 
-      </div>
+        </div>
 
-      <div class="p-2 text-center">
+        <div class="p-2 text-center">
 
-        <a href="../catagories.html"> <img src="../mobile-category-images/bottom-bar-images/menu.png"
-            class="img-fluid" /> </a>
+          <a href="../catagories.html"> <img src="../mobile-category-images/bottom-bar-images/menu.png"
+              class="img-fluid" /> </a>
 
-        <p style="font-size: 11px;"> Categories </p>
+          <p style="font-size: 11px;"> Categories </p>
 
-      </div>
+        </div>
 
-      <div class="p-2 text-center">
+        <div class="p-2 text-center">
 
-        <a href="../trending/underConstruction.html"> <img src="../mobile-category-images/bottom-bar-images/trending.png"
-            class="img-fluid trending-image" /> </a>
+          <a href="../trending/underConstruction.html"> <img
+              src="../mobile-category-images/bottom-bar-images/trending.png" class="img-fluid trending-image" /> </a>
 
-        <p style="font-size: 11px;"> Trending </p>
+          <p style="font-size: 11px;"> Trending </p>
 
-      </div>
+        </div>
 
-      <div class="p-2 text-center">
+        <div class="p-2 text-center">
 
-        <a href="new-account.html"> <img src="../mobile-category-images/bottom-bar-images/user.png"
-            class="img-fluid" /> </a>
+          <a href="new-account.html"> <img src="../mobile-category-images/bottom-bar-images/user.png"
+              class="img-fluid" /> </a>
 
-        <p style="font-size: 11px;"> Account </p>
+          <p style="font-size: 11px;"> Account </p>
 
-      </div>
+        </div>
 
-      <div class="p-2 text-center">
+        <div class="p-2 text-center">
 
-        <a href="../emptyCart.html"> <img src="../mobile-category-images/bottom-bar-images/cart.png" class="img-fluid" /> </a>
+          <a href="../emptyCart.html"> <img src="../mobile-category-images/bottom-bar-images/cart.png"
+              class="img-fluid" /> </a>
 
-        <p style="font-size: 11px;"> Cart </p>
+          <p style="font-size: 11px;"> Cart </p>
+
+        </div>
 
       </div>
 
     </div>
 
-  </div>
-
-  <!-- Mobile Bottom Bar ENDS -->
+    <!-- Mobile Bottom Bar ENDS -->
 
 
 
 
 
 
-  <!-- stepper -->
-  <script type="text/javascript" src="js/stepper.js"></script>
-  <!-- stepper -->
 
 
-  <script>
-      // $(document).ready(function () {
-      //   alert('hhello world')
-      // });
-      // $(document).ready(function () {
-      //   $("#product-slider").owlCarousel({
-      //     items: 6,
-      //     itemsDestop: [1192, 2],
-      //     itemsDestopSmall: [980, 2],
-      //     itemsMoile: [700, 1],
-      //     pagination: true,
-      //     navigation: true,
-      //     navigationText: ["", ""],
-      //     autoPlay: true
+    <script src="../Links/jQuery-3.6.0/jquery.min.js"></script>
 
-      //   });
-      // });
-
-  </script>
-
-  <!-- owl-carousel -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-    integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-  <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      crossorigin="anonymous"></script> -->
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
-
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-      crossorigin="anonymous"></script> -->
-
-
-  <script src="js/zoomsl.js"></script>
+    <script src="../Links/bootstrap-4.6.0-dist/js/bootstrap.bundle.js"></script>
 
 </body>
 
