--- a/singup.html
+++ b/singup.html
@@ -2,30 +2,27 @@
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" href="Links/bootstrap-4.6.0-dist/css/bootstrap.css">
 
-
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    crossorigin="anonymous" />
-
-
-  <!-- bootstrape 4.600 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <!-- bootstrape 4.600 end-->
-
+  <link rel="stylesheet" href="Links/font-awesome/fontawesome-free-5.15.3-web/css/all.min.css" />
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/productimage.css">
-  <link rel="stylesheet" href="checkOut.css">
+
   <link rel="stylesheet" href="css/productimage.css">
 
+  <link rel="stylesheet" href="checkOut.css">
+
+  <link rel="stylesheet" href="css/productimage.css">
 
   <title>Maqaami | Sign Up</title>
+  
 </head>
 
 <body style="background-image: url('img/bg-image.jpg'); background-size: 100% 100%;">
@@ -138,81 +135,14 @@
 
 
 
+  <script src="Links/bootstrap-4.6.0-dist/js/bootstrap.bundle.js"></script>
 
+  <script src="Links/jQuery-3.6.0/jquery.min.js"></script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- stepper -->
-  <script type="text/javascript" src="js/stepper.js"></script>
-  <!-- stepper -->
-
-
-  <script>
-      // $(document).ready(function () {
-      //   alert('hhello world')
-      // });
-      // $(document).ready(function () {
-      //   $("#product-slider").owlCarousel({
-      //     items: 6,
-      //     itemsDestop: [1192, 2],
-      //     itemsDestopSmall: [980, 2],
-      //     itemsMoile: [700, 1],
-      //     pagination: true,
-      //     navigation: true,
-      //     navigationText: ["", ""],
-      //     autoPlay: true
-
-      //   });
-      // });
-
-  </script>
-
-  <!-- owl-carousel -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-    integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-  <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      crossorigin="anonymous"></script> -->
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
-
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-      crossorigin="anonymous"></script> -->
-
-
-  <script src="js/zoomsl.js"></script>
+   <!-- stepper -->
+   <script type="text/javascript" src="js/stepper.js"></script>
+   <!-- stepper -->
+ 
 
 </body>
 
