--- a/account-page/women-mobile-list.html
+++ b/account-page/women-mobile-list.html
@@ -3,20 +3,22 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Women | noon.com </title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        crossorigin="anonymous" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title> Women | noon.com </title>
+
+    <link rel="stylesheet" href="../Links/bootstrap-4.6.0-dist/css/bootstrap.css">
+
+    <link rel="stylesheet" href="../Links/font-awesome/fontawesome-free-5.15.3-web/css/all.min.css" />
 
     <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="../css/style.css">
 
-    <!-- Fashion Styles CDN -->
+    <!-- Fashion Styles Css -->
 
     <link rel="stylesheet" href="fashion.css">
 
@@ -24,7 +26,7 @@
 
     <link rel="stylesheet" href="popup.css">
 
-    <!-- list-card style CDN -->
+    <!-- list-card style Css -->
 
     <link rel="stylesheet" href="list-card.css">
 
@@ -1722,15 +1724,9 @@
 
 
 
+    <script src="../Links/jQuery-3.6.0/jquery.min.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
-
-    <!-- <script src="app.js"></script> -->
+    <script src="../Links/bootstrap-4.6.0-dist/js/bootstrap.bundle.js"></script>
 
 </body>
 
