--- a/customer-panel/address.html
+++ b/customer-panel/address.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title> My Account | Maqaami </title>
+
     <link rel="stylesheet" href="orderstyle.css" />
+
     <link rel="stylesheet" href="../css/style.css">
 
     <!-- Mobile External CSS -->
@@ -15,8 +21,7 @@
 
     <!-- BOOTSTRAP CSS LINK -->
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="../Links/bootstrap-4.6.0-dist/css/bootstrap.css">
 
     <!-- Font Awesome CDN -->
 
@@ -536,15 +541,9 @@
 
     </div>
 
-    <!-- BOOTSTRAP JQUERY LINKS  -->
+    <script src="../Links/jQuery-3.6.0/jquery.min.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
-
+    <script src="../Links/bootstrap-4.6.0-dist/js/bootstrap.bundle.js"></script>
 
     <script src="mobile-script.js"></script>
 
