--- a/orderPlaced.html
+++ b/orderPlaced.html
@@ -2,35 +2,27 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        crossorigin="anonymous" />
+    <link rel="stylesheet" href="Links/bootstrap-4.6.0-dist/css/bootstrap.css">
+
+    <link rel="stylesheet" href="Links/font-awesome/fontawesome-free-5.15.3-web/css/all.min.css" />
 
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/productimage.css"> -->
+
     <link rel="stylesheet" href="checkOut.css">
-
-
-    <!-- bootstrape 4.600 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <!-- bootstrape 4.600 end-->
 
     <!-- stepper -->
     <link rel="stylesheet" type="text/css" href="css/stepper.css">
     <!-- stepper End -->
 
-    <!-- google maps links -->
-
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"> -->
-
-    <!-- google maps links end -->
-
     <title>Maqaami | PLACED ORDERED</title>
+
 </head>
 
 <body>
@@ -102,9 +94,9 @@
         </div>
         <div class="row py-2">
             <div class="col-12 text-center">
-                <a href="index.html" >
-                <button class="btn btn-primary allbtnSizes ">Continue Shopping</button>
-            </a>
+                <a href="index.html">
+                    <button class="btn btn-primary allbtnSizes ">Continue Shopping</button>
+                </a>
 
             </div>
         </div>
@@ -250,7 +242,7 @@
                 </p>
             </div>
 
-          
+
 
         </div>
 
@@ -265,44 +257,13 @@
       
       </div> -->
 
+    <script src="Links/jQuery-3.6.0/jquery.min.js"></script>
 
-
-    <!-- map API script -->
-
-    <script
-        src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBXOzsnsvI4Q51gybw50pY_azOLA9IH8TM&callback=initMap"
-        async defer></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
-    <!-- <script
-        src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAWgFEQlKEqacXN24owJg5933dMHV0mqnI"></script> -->
-    <script src="js/mapAPI.js"></script>
-    <!-- map API script -->
+    <script src="Links/bootstrap-4.6.0-dist/js/bootstrap.bundle.js"></script>
 
     <!-- stepper -->
     <script type="text/javascript" src="js/stepper.js"></script>
     <!-- stepper -->
-
-
-    <!-- owl-carousel -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- owl-carousel -->
-
-    <!-- bootstrape 4.600 -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
-    <!-- bootstrape 4.600 end-->
-
-
 
 
 </body>
