--- a/payment.html
+++ b/payment.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="Links/bootstrap-4.6.0-dist/css/bootstrap.css">
 
-    <!-- bootstrape 4.600 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <!-- bootstrape 4.600 end-->
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        crossorigin="anonymous" />
+    <link rel="stylesheet" href="Links/font-awesome/fontawesome-free-5.15.3-web/css/all.min.css" />
 
     <link rel="stylesheet" href="css/style.css">
+
     <link rel="stylesheet" href="checkOut.css">
 
-    <!-- stepper -->
     <link rel="stylesheet" type="text/css" href="css/stepper.css">
-    <!-- stepper End -->
+
     <title>Maqaami | payment</title>
+
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-between"
         style="background-color:#008bff ; color: white;">
 
@@ -91,7 +92,7 @@
 
                         <div class="main-heading-section  mt-4">
 
-                            
+
 
                             <p class="allheadingSizes"> Payment Method </p>
 
@@ -109,12 +110,16 @@
 
                                     <div class="first-btn d-flex flex-row justify-content-around">
 
-                                        <button  id="btn-pay-card" class="firstbtn border-btn-blue btn-1 payWcard btn-outline-none  btn w-100 allbtnSizes "> Pay with card
+                                        <button id="btn-pay-card"
+                                            class="firstbtn border-btn-blue btn-1 payWcard btn-outline-none  btn w-100 allbtnSizes ">
+                                            Pay with card
                                         </button>
                                         &nbsp;
-                                        <button  id="btn" class=" btn-1 butnn secondbtn  allbtnSizes btn w-100 font-weight-bold">  
+                                        <button id="btn"
+                                            class=" btn-1 butnn secondbtn  allbtnSizes btn w-100 font-weight-bold">
                                             <!-- <i class="fas fa-money-check-alt" style="color: #008bff;"></i> -->
-                                            Cash On Delivery </button>
+                                            Cash On Delivery
+                                        </button>
 
                                     </div>
 
@@ -129,7 +134,7 @@
                                     </div>
 
                                 </div> -->
-                                
+
                                 <div class="container" id="hideBYdefult">
                                     <!-- <button type="button" class="  btn-primary mt-4 float-right"> <i
                                             class="fa fa-money" aria-hidden="true"></i>
@@ -198,8 +203,9 @@
                                     <div class="row mt-4">
                                         <div class="col-12">
                                             <a href="otp.html" style="text-decoration: none;">
-                                            <button class="btn-block btn btn-primary allbtnSizes"> Place Order</button>
-                                        </a>
+                                                <button class="btn-block btn btn-primary allbtnSizes"> Place
+                                                    Order</button>
+                                            </a>
                                         </div>
                                     </div>
 
@@ -240,7 +246,8 @@
                                                                 </div>
 
                                                                 <p class="mb-0"><span><strong>SAR17.99</strong></span>
-                                                                    <small>QTY 1</small></p>
+                                                                    <small>QTY 1</small>
+                                                                </p>
 
 
 
@@ -255,7 +262,8 @@
 
                                                                     <div class="text-right">
                                                                         <img src="img/express-delivery.png"
-                                                                            class="img-fluid" style="height: 20px; width: 90px;">
+                                                                            class="img-fluid"
+                                                                            style="height: 20px; width: 90px;">
                                                                     </div>
 
                                                                 </div>
@@ -298,7 +306,7 @@
 
                     <div class="card-body">
 
-                        <h5 class="mb-3 allheadingSizes">  ORDER SUMMARY  </h5>
+                        <h5 class="mb-3 allheadingSizes"> ORDER SUMMARY </h5>
 
                         <ul class="list-group list-group-flush">
 
@@ -361,7 +369,8 @@
                                 Raja Waqar
                             </li>
 
-                            <li class="list-group-item d-flex justify-content-between align-items-center px-0 allparagraphSizes">
+                            <li
+                                class="list-group-item d-flex justify-content-between align-items-center px-0 allparagraphSizes">
                                 Zohra, Dubai, Dubai, UAE, +9718232367864
                             </li>
 
@@ -427,54 +436,13 @@
 
 
 
+    <script src="Links/jQuery-3.6.0/jquery.min.js"></script>
 
+    <script src="Links/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
 
-
-
-    <script>
-
-    </script>
-
-
-
-
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-  crossorigin="anonymous"></script> -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        crossorigin="anonymous"></script>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"></script> -->
-
-    <!-- bootstrape 4.600 -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-crossorigin="anonymous"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
-    <!-- bootstrape 4.600 end-->
+    <script src="Links/bootstrap-4.6.0-dist/js/bootstrap.bundle.js"></script>
 
     <script src="js/app.js"></script>
-
-
-
-
-
-
-
-
-
-
-
 
 </body>
 
