--- a/shipping.html
+++ b/shipping.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="Links/bootstrap-4.6.0-dist/css/bootstrap.css">
 
-    <!-- bootstrape 4.600 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <!-- bootstrape 4.600 end-->
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        crossorigin="anonymous" />
+    <link rel="stylesheet" href="Links/font-awesome/fontawesome-free-5.15.3-web/css/all.min.css" />
 
     <link rel="stylesheet" href="css/style.css">
+
     <link rel="stylesheet" href="checkOut.css">
 
-    <!-- stepper -->
     <link rel="stylesheet" type="text/css" href="css/stepper.css">
-    <!-- stepper End -->
+
     <title>Maqaami | Shipping</title>
 </head>
 
@@ -127,13 +126,13 @@
                                 Home&nbsp; <i class="fas fa-map-marker-alt"></i>
                             </div>
 
-                            <div class=" d-flex justify-content-between mt-2 allheadingSizes" > Name <span
+                            <div class=" d-flex justify-content-between mt-2 allheadingSizes"> Name <span
                                     style=" font-weight: normal;"> Raja Waqar </span>
                             </div>
-                            <div class=" d-flex justify-content-between  mt-2 allheadingSizes" > Address <span
+                            <div class=" d-flex justify-content-between  mt-2 allheadingSizes"> Address <span
                                     style=" font-weight: normal;"> Dubai </span>
                             </div>
-                            <div class="  d-flex justify-content-between  mt-2  allheadingSizes" > Phone Number
+                            <div class="  d-flex justify-content-between  mt-2  allheadingSizes"> Phone Number
                                 <span style="font-weight: normal;">
                                     +9712764827478
                                 </span>
@@ -160,13 +159,13 @@
                                 Home&nbsp; <i class="fas fa-map-marker-alt"></i>
                             </div>
 
-                            <div class=" d-flex justify-content-between mt-2 allheadingSizes" > Name <span
+                            <div class=" d-flex justify-content-between mt-2 allheadingSizes"> Name <span
                                     style=" font-weight: normal;"> Raja Waqar </span>
                             </div>
-                            <div class=" d-flex justify-content-between  mt-2 allheadingSizes" > Address <span
+                            <div class=" d-flex justify-content-between  mt-2 allheadingSizes"> Address <span
                                     style=" font-weight: normal;"> Dubai </span>
                             </div>
-                            <div class="  d-flex justify-content-between  mt-2 allheadingSizes" > Phone Number
+                            <div class="  d-flex justify-content-between  mt-2 allheadingSizes"> Phone Number
                                 <span style="font-weight: normal;">
                                     +9712764827478
                                 </span>
@@ -189,8 +188,7 @@
 
                         <div class="card-body">
 
-                            <div class="card-header text-center  my-5"
-                                style="background: none; border: none;">
+                            <div class="card-header text-center  my-5" style="background: none; border: none;">
                                 <a href="map.html" style="color: silver;"> + Add a new address </a>
                             </div>
 
@@ -216,10 +214,10 @@
 
                     <a href="userdetails.html">
 
-                    <button type="button "  class=" btn btn-lg btn-primary float-right allbtnSizes" disabled> 
-                        
+                        <button type="button " class=" btn btn-lg btn-primary float-right allbtnSizes" disabled>
+
                             Continue </button>
-                        </a>
+                    </a>
 
                 </div>
 
@@ -262,28 +260,9 @@
 
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="Links/jQuery-3.6.0/jquery.min.js"></script>
 
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-  crossorigin="anonymous"></script> -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        crossorigin="anonymous"></script>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"></script> -->
-
-    <!-- bootstrape 4.600 -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-crossorigin="anonymous"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
-    <!-- bootstrape 4.600 end-->
+    <script src="Links/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
 
     <script src="js/app.js"></script>
 
